# selfavoidingbilliards

./: .gitignore  Cargo.toml  readme.md
src/: main.rs
