[package]
name = "mazi_billiards_fractal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bresenham = "0.1.1"
cgmath = "0.18.0"
chrono = "0.4.38"
enterpolation = "0.2.1"
geo = "0.28.0"
heapless = "0.8.0"
indicatif = "0.17.8"
palette = "0.7.5"
rand = "0.8.5"
rusty-ppm = "0.3.0"
simple-canvas = "0.1.1"
tiff = "0.9.1"
