[package]
name = "self-avoiding-billiards"
version = "0.1.0"
edition = "2021"

[dependencies]
bresenham = "0.1.1"
cgmath = "0.18.0"
chrono = "0.4.38"
geo = "0.28.0"
heapless = "0.8.0"
indicatif = "0.17.8"
rand = "0.8.5"
simple-canvas = "0.1.1"
tiff = "0.9.1"

[profile.release]
codegen-units = 1
lto = "fat"